@@ -93,7 +93,7 @@ class PaymentPaypalPayflowPro extends IsotopePayment
 			'ACCT'					=> $_SESSION['CHECKOUT_DATA']['payment'][$this->id]['cc_num'],
 			'EXPDATE'				=> $strExpDate,
 			'NAME'					=> $strCardType,
-			'AMT'					=> round($this->Isotope->Cart->grandTotal,2),
+			'AMT'					=> round($this->Isotope->Cart->grandTotal, 2),
 			'CURRENCY'				=> $this->Isotope->Config->currency,
       		'COMMENT1'				=> '',	//TODO: Provide space for order comments.
 			'FIRSTNAME'				=> $this->Isotope->Cart->billingAddress['firstname'],
