@@ -75,7 +75,7 @@ CREATE TABLE `tl_iso_products` (
   `description` text NULL,
   `keywords_meta` text NULL,
   `description_meta` text NULL,
-  `price` float unsigned NOT NULL default '0',
+  `price` float NOT NULL default '0',
   `price_override` varchar(255) NOT NULL default '',
   `max_order_quantity` int(10) unsigned NOT NULL default '0',
   `stock_enabled` char(1) NOT NULL default '',
@@ -331,7 +331,7 @@ CREATE TABLE `tl_iso_cart_items` (
   `product_name` varchar(255) NOT NULL default '',
   `product_options` blob NULL,
   `product_quantity` int(10) unsigned NOT NULL default '0',
-  `price` float unsigned NOT NULL default '0',
+  `price` float NOT NULL default '0',
   `href_reader` varchar(255) NOT NULL default '',
   `rules_applied` blob NULL,
   PRIMARY KEY  (`id`),
@@ -381,7 +381,7 @@ CREATE TABLE `tl_iso_payment_modules` (
   `type` varchar(64) NOT NULL default '',
   `label` varchar(255) NOT NULL default '',
   `note` text NULL,
-  `price` float unsigned NOT NULL default '0',
+  `price` float NOT NULL default '0',
   `tax_class` int(10) unsigned NOT NULL default '0',
   `countries` blob NULL,
   `shipping_modules` blob NULL,
@@ -451,7 +451,7 @@ CREATE TABLE `tl_iso_shipping_modules` (
   `subdivisions` longblob NULL,
   `minimum_total` varchar(32) NOT NULL default '',
   `maximum_total` varchar(32) NOT NULL default '',
-  `price` float unsigned NOT NULL default '0',
+  `price` float NOT NULL default '0',
   `surcharge_field` varchar(255) NOT NULL default '',
   `flatCalculation` varchar(10) NOT NULL default '',
   `weight_unit` varchar(5) NOT NULL default '',
@@ -482,7 +482,7 @@ CREATE TABLE `tl_iso_shipping_options` (
   `tstamp` int(10) unsigned NOT NULL default '0',
   `name` varchar(255) NOT NULL default '',
   `description` text NULL,
-  `rate` double NULL default NULL,
+  `rate` float NOT NULL default '0',
   `minimum_total` int(10) NOT NULL default '0',
   `maximum_total` int(10) NOT NULL default '0',
   `weight_from` varchar(32) NOT NULL default '0',
@@ -523,10 +523,10 @@ CREATE TABLE `tl_iso_orders` (
   `surcharges` blob NULL,  
   `payment_data` blob NULL,
   `shipping_data` blob NULL,
-  `subTotal` double NULL default NULL,
-  `taxTotal` double NULL default NULL,
-  `shippingTotal` double NULL default NULL,
-  `grandTotal` double NULL default NULL,
+  `subTotal` float NOT NULL default '0',
+  `taxTotal` float NOT NULL default '0',
+  `shippingTotal` float NOT NULL default '0',
+  `grandTotal` float NOT NULL default '0',
   
   `cc_num` varchar(64) NOT NULL default '',
   `cc_type` varchar(32) NOT NULL default '',
@@ -558,7 +558,7 @@ CREATE TABLE `tl_iso_order_items` (
   `product_name` varchar(255) NOT NULL default '',
   `product_options` blob NULL,
   `product_quantity` int(10) unsigned NOT NULL default '0',
-  `price` float unsigned NOT NULL default '0',
+  `price` float NOT NULL default '0',
   `rules_applied` blob NULL,
   PRIMARY KEY  (`id`),
   KEY `pid` (`pid`)
